refactor: address Task 1 review notes — test name, XML doc header, Collectors.toList -> List.of style